# pro2_osc_prj

./: .gitignore  .sconsign.dblite  Makefile  README.md  README.txt  Rules.mk  SConstruct  Untitled-1.txt  Visual_code_shortkey.txt  bootanimation  common_cc.mk  common_defs.mk  config.py  diff.txt  fifo_change.txt  init.rc  install.cpp  nvidia@192.168.55.1  osc调试记录.txt  push_pro2_service_device.sh  restart.bat  各版本提交记录.txt  问题记录.txt
Pro2_OSC/pro2_osc/: __main__.py  _setOptionsTemplate.json  cameraConnect.py  changeOptions.py  commandUtility.py  commands.py  config.py  findOptions.py  intervalTemplate.json  log_util.py  pictureFormatMap.json  statusMapping.json  str_util.py  takePictureTemplate.json  timer_util.py
Pro2_OSC/pro2_osc/template/: currentOptions.json  defaultOptions.json  entriesTemplate.json  intervalTemplate.json  osc_info.json  previewTemplate.json  takePictureTemplate.json
ProOscService-0.1.0/: setup.py
ProOscService-0.1.0/pro_osc/: currentOptions.json  defaultOptions.json  exposureMapping.json  findOptions.py  info.json  osc_service.py  previewTemplate.json
bootlogo/: SConscript  bootanimation.cpp
doc/: git命令集
extlib/libcutils/: klog.c  uevent.c
extlib/libutils/: Looper.cpp
http/: msg_send.py
http_server/: CoreServer.cpp  CoreServer.h  SConscript  http_server.cpp  mongoose.cpp  mongoose.h  simplest_web_server.cpp
include/init/: _futex.h  _system_properties.h  system_properties.h
init/: .SConscript.swp  Makefile  SConscript  builtins.c  devices.c  init.c  init_parser.c  log.h  property_service.c  signal_handler.c  ueventd.c  util.c
mongoose_new/: mongoose.cpp  mongoose.h  simplest_web_server.cpp
osc_client/: __main__.py  commands.py
pro2_service/: AudioManager.cpp  CacheService.cpp  InputManager.cpp  LocalSocketImpl.c  Makefile  MenuUI.cpp  MidProto.cpp  NetManager.cpp  NetlinkEvent.cpp  NetlinkHandler.cpp  NetlinkListener.cpp  NetlinkManager.cpp  Process.cpp  ProtoManager.cpp  SConscript  SD卡挂载专题.txt  Samba访问U盘导致内核崩溃  SettingMenu.cpp  SocketClient.cpp  SocketListener.cpp  StorageManager.cpp  TempService.cpp  VolumeManager.cpp  dev_manager.cpp  fifo.cpp  forkUtil.cpp  main.cpp  net_manager.cpp  oled_handler.cpp  oled_handler.cpp.autosave  osc2_proto.txt  poll_timer.cpp  pro_cfg.cpp  pro_uevent.c  udisk.cpp  vm_clean  vm_clean.cpp  修改记录.txt
pro2_service/cfg/: def_cfg
pro2_service/factory_test/: factory_test  factory_test.cpp  main.cpp  trans.h
pro2_service/hw/: battery_interface.cpp  ins_gpio.cpp  ins_i2c.cpp  oled_light.cpp  oled_module.cpp
pro2_service/include/: err_code.h  prop_cfg.h  ui_res.h
pro2_service/include/common/: check.h
pro2_service/include/hw/: InputManager.h  MenuUI.h  battery_interface.h  dev_manager.h  lan.h  oled_handler.h  oled_light.h  oled_module.h  tx_oled.h  tx_softap.h  usb_dev_info.h
pro2_service/include/icon/: pic_mode_select.h  pic_video_select.h  setting_menu_icon.h  vid_mode_select.h
pro2_service/include/json/: value.h
pro2_service/include/log/: arlog.h  stlog.h
pro2_service/include/sys/: AudioManager.h  CacheService.h  Condition.h  Menu.h  Mutex.h  NetlinkEvent.h  NetlinkListener.h  ProtoManager.h  StorageManager.h  TempService.h  VolumeManager.h  action_info.h  ins_types.h  net_manager.h  pro_cfg.h
pro2_service/include/trans/: MidleProtocol.h  ProtoManager.h  fifo.h  fifo_struct.h
pro2_service/include/update/: update_oled.h  update_util.h
pro2_service/include/util/: ARMessage.h  font_ascii.h  icon_ascii.h  util.h
pro2_service/power/: PowerManager.cpp  SConscript
pro2_service/test_code/: StorageManager.h  test_jsoncpp_lib.cpp
pro2_service/test_code/battery_test/: CMakeLists.txt
pro2_service/test_code/gpio_test/: CMakeLists.txt
pro2_service/test_code/gpio_test/fan_control/: CMakeLists.txt
pro2_service/test_code/gyro_lib/: CMakeLists.txt
pro2_service/test_code/gyro_new/: CMakeLists.txt
pro2_service/test_code/i2c_test/: CMakeLists.txt
pro2_service/test_code/json_test/: CMakeLists.txt
pro2_service/test_code/poll_interrupt/: CMakeLists.txt
pro2_service/test_code/pro_stack/: CMakeLists.txt
pro2_service/test_code/rtc_test/: CMakeLists.txt
pro2_service/test_code/wifi_test/: CMakeLists.txt
pro2_service/udisk/: Makefile~  udisk_test.cpp
pro2_service/util/: ARLooper.cpp  ARMessage.cpp  LogManager.cpp  arlog.c  bytes_int_convert.cpp  http_util.cpp  main.cpp  md5.cpp  pro_version.cpp  stlog.cpp  update_oled.cpp  util.cpp
test/: a.out  calc_len  calc_len.c  strtok  strtok.cpp  sys_read.c
time_tz/: time_tz.cpp
update_app/: Makefile  SConscript  update_app.cpp  update_util.cpp
update_check/: Makefile  SConscript  main.cpp
update_tool/: Makefile  md5.cpp  update_tool.cpp
vold/: Makefile  Makefile~  NetlinkEvent.cpp  NetlinkEvent.h  NetlinkHandler.cpp  NetlinkListener.cpp  NetlinkManager.cpp  SConscript  SocketClient.cpp  SocketClient.h  SocketListener.cpp  VolumeManager.h  main.cpp  out  vold_test
web_osc/: SConscript  http_server.cpp  http_server.h  log_wrapper.h  main.cpp  osc_server.cpp  osc_server.h  web_http.c  web_http.cpp  web_http.h
web_server/: __main__.py  config.py  control_center.py  list_file_thread.py  pro2_osc_main.py  pro_osc_main.py  state_machine.py  thread_utils.py
web_server/osc_protocol/: ins_osc_globo.py  ins_osc_info.py  ins_osc_state.py
web_server/poll/: monitor_event.py
web_server/pro_osc/: http_util.py
web_server/util/: ins_log_util.py  ins_util.py  log_util.py  timer_util.py  version_util.py
ws_src/: __main__.py  config.py  control_center.py  flaskr.db  monitor_event.py  pro_osc_main.py  settings.py
ws_src/osc_protocol/: ins_check_update.py  ins_osc_globo.py  ins_osc_info.py  ins_osc_state.py  ins_osc_state.py_b
ws_src/poll/: monitor_event.py
ws_src/pro_osc/: http_util.py
ws_src/util/: fifo_util.py  ins_util.py  log_util.py  signal_util.py  time_zones.py  version_util.py
