cmake_minimum_required(VERSION 3.6)
project(pro_stack)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -fPIC -fexceptions -pie -fPIE -Wall -Wunused-variable -Werror")
set(SOURCE main.cpp usb_cam.cpp usb_cam_manager.cpp usb_dev.cpp)
add_executable(${PROJECT_NAME} ${SOURCE})

set(LIB_LIST libev.a libins_log.so libgpio.so)
foreach(LIB ${LIB_LIST})
    find_library(LIB_PATH ${LIB})
    MESSAGE(STATUS, "lib path " ${LIB_PATH})
    target_link_libraries(${PROJECT_NAME} ${LIB_PATH})
    unset(LIB_PATH CACHE)
endforeach()

set(INC_LIST ev++.h stlog.h)
foreach(INC ${INC_LIST})
    find_path(INC_PATH ${INC})
    MESSAGE(STATUS, "inc path " ${INC_PATH})
    include_directories(${INC_PATH})
    unset(INC_PATH CACHE)
endforeach()
install(TARGETS ${PROJECT_NAME} RUNTIME DESTINATION ${CMAKE_INSTALL_PREFIX})